add hflip, vflip

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,6 +18,8 @@ list(APPEND aitisa_test_srcs
   batch_norm_test.cpp
   sigmoid_test.cpp
   relu_test.cpp
+  horizontal_flip_test.cpp
+  vertical_flip_test.cpp
 )
 
 # Build a exe for each test files
